- Added font styling for all text including colors for subtext - Removed placeholder colors for panel cards - Adjusted margins for elements to improve layout and readability - Fixed issue with panel card icons not moving to bottom of main content cards - Other minor styling (ex. Bold Headings)

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,5 @@
 *{
-
-}
-
-@font-face {
-    font-family: ;
-    src: url();
+    font-family: 'Roboto', sans-serif;
 }
 
 .container{
@@ -22,7 +17,7 @@
 }
 
 .sidebar-group{
-    margin: 20px 0px 20px 20px;
+    margin: 20px;
 }
 
 .sidebar-element{
@@ -45,17 +40,21 @@
 
 .header-row{
     display: flex;
+    margin-left: 30px;
 }
 
 .header-row > svg{
     height: 24px;
     width: 24px;
     margin: 15px;
+    align-self: center;
+    align-items: center;
 }
 
 .header-signin{
     display: flex;
     margin-left: auto;
+    margin-right: 50px;
 }
 
 .header-signin > svg{
@@ -69,6 +68,7 @@
     display: flex;
     align-items: center;
     margin-left: auto;
+    margin-right: 50px;
 }
 
 .header-buttons > button{
@@ -98,14 +98,20 @@
     box-shadow: 0px 5px 10px  rgb(133, 132, 132);
 }
 
+.name-greeting{
+    margin-left: 10px;
+}
+
 .main-content{
     background-color: rgb(230, 230, 230);
     z-index: -1;
     display: flex;
 }
 
+
 .projects-panel > p{
     margin-left: 20px;
+    margin-top: 30px;
 }
 
 .projects-grid{
@@ -118,17 +124,30 @@
 }
 
 .projects-card{
-    background-color: green;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
     border-left-style: solid;
+    border-color: rgb(231, 158, 0);
     border-width: 10px;
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0px 5px 10px  rgb(133, 132, 132);
 }
 
+.projects-card > p{
+    margin-bottom: 0px;
+}
+
+.projects-card > p:last-of-type{
+    color: grey;
+}
+
 .projects-card-icons{
     display: flex;
     justify-content: flex-end;
+    /* justify-self: flex-end; */
+    margin-top: auto;
 }
 
 .projects-card-icons > svg{
@@ -137,14 +156,30 @@
     margin: 18px;
 }
 
+.right-panel > p{
+    margin-top: 30px;
+}
+
 .right-panel-card{
-    background-color: red;
-    border-style: solid;
+    background-color: white;
+    border-style: none;
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0px 5px 10px  rgb(133, 132, 132);
 }
 
+.right-panel-card > p{
+    margin-bottom: 2%;
+}
+
+.right-panel-card-entry > p:last-of-type{
+    color: grey;
+}
+
 .profile-entry{
     display: flex;
+}
+
+.profile-desc > p:last-of-type{
+    color: grey;
 }
